function.css
* {
  box-sizing: border-box;
  font-weight: 100;
}
html {
  color-scheme: dark light;
  font-size: 20px;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  line-height: 1.1;
}
body {
  padding: 0;
  margin: 0;
  min-height: 100vh;
}
header {
  background-color: #333;
  color: gold;
  margin: 0;
  padding: 1rem 3rem;
}
main {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
}
main h2 {
  padding: 1rem 3rem;
  font-weight: 300;
}
.box {
  padding: 1rem;
}
.box p {
  font-weight: 300;
  padding: 0.5rem 1rem;
  margin: 0;
}
.regular {
  background-color: hsl(140, 66%, 63%);
  color: #222;
}
.arrow {
  background-color: hsl(200, 66%, 63%);
  color: #222;
}

